--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -3,7 +3,6 @@
 
 .hero {
     padding: 5.6vw;
-    background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
@@ -35,21 +34,7 @@
                 width: calc(50% - 12px);
                 img {
                     max-height: 60px;
-                }
-                button {
-                    display: block;
-                    width: 100%;
-                    height: 60px;
-                    font-size: 18px;
-                    color: variaveis.$corTextoSecundario;
-                    background-color: #6421ff;
-                    text-transform: uppercase;
-                    border-radius: 4px;
-                    margin-top: 2vw;
-                    margin-bottom: 8px;
-                    
-                }
+                }}
             }
         }
     }
-}
