--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,7 @@
 @use 'variaveis';
 @use 'hero';
+@use 'shows';
+@use 'plans';
 
 @font-face {
     font-family:Avenir;
@@ -17,11 +19,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Avenir, sans-serif;
 }
 
 body {
     background-color: variaveis.$corDeFundo;
-    font-family: Avenir, sans-serif;
 }
 @mixin text($fontSize: 16px) {
     font-size: $fontSize;
@@ -40,7 +42,7 @@ body {
 .text {
     @include text;
 }
-.text-small {
+.text--small {
     @include text(12px);
 }
 .link-text {
@@ -56,4 +58,16 @@ body {
 }
 .title--small {
     @include title(28px);
+}
+.button {
+    display: block;
+    width: 100%;
+    height: 60px;
+    font-size: 18px;
+    color: variaveis.$corTextoSecundario;
+    background-color: #6421ff;
+    text-transform: uppercase;
+    border-radius: 4px;
+    margin-top: 2vw;
+    margin-bottom: 8px;    
 }
