--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -5,9 +5,23 @@
     padding: 5.6vw;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
+    //position: relative;
     background-image: url(../images/hero_desktop.jpeg);
     text-align: center;
+    //background-size: cover;
+
+    @media (max-width: 768px) {
+        background-image: url(../images/hero_celular.jpeg);
+        padding-top: calc(50vw + 25vw);
+        background-size: contain;
+        //background-repeat: no-repeat;
+        margin-top: -55px;
+    }
+
+    .button {
+        margin-top: 2vw;
+        margin-bottom: 8px;
+    }
     
 
     &__content {
@@ -16,6 +30,10 @@
         &__branding {
             max-width: 320px;
             margin: 0 auto 38px;
+
+            @media (max-width: 768px) {
+                max-width: 180px;
+            }
         }
         .title--small {
             margin-bottom: 64px;
@@ -30,11 +48,22 @@
             display: flex;
             justify-content: space-between;
 
+            @media (max-width: 768px) {
+                display: block;
+            }
+
             &__combo {
                 width: calc(50% - 12px);
+
+                @media (max-width: 768px) {
+                    width: 100%;
+                    margin-bottom: 24px;
+                }
+
                 img {
                     max-height: 60px;
-                }}
+                }
+            }
             }
         }
     }
