--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -10,6 +10,10 @@
         grid-template-columns: 1fr 1fr 1fr;
         gap: 24px;
 
+        @media (max-width: 768px) {
+            grid-template-columns: 1fr 1fr;
+        }
+
         &--is-active {
             display: grid;
         }
@@ -24,6 +28,11 @@
     &__tabs {
         display: flex;
         justify-content: center;
+        
+        @media (max-width: 768px) {
+            white-space: nowrap;
+            padding-left: 20px;
+        }
 
         &__button {
             color: variaveis.$corTextoSecundario;
@@ -39,6 +48,9 @@
 
             &--is-active {
                 border-bottom: 5px solid variaveis.$corTextoSecundario;
+            }
+            @media (max-width: 768px) {
+                font-size: 16px;
             }
 
         }
