edição em main.scss

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,8 @@
 @use 'faq';
 @use 'footer';
 @use 'header';
+@use 'sass:color';
+
 
 @font-face {
     font-family:Avenir;
@@ -105,7 +107,7 @@ body {
     border: 1px solid variaveis.$corDeFundoBotaoPrimario;
 
     &:hover {
-        background-color: lighten(variaveis.$corDeFundoBotaoPrimario, 3%);
+        background-color: color.adjust(variaveis.$corDeFundoBotaoPrimario, $lightness:3%);
     }
 
     &--secondary {
@@ -113,7 +115,7 @@ body {
         border-color: variaveis.$corDeFundoBotaoSecundario;
 
         &:hover {
-            background-color: lighten(variaveis.$corDeFundoBotaoSecundario, 3%);
+            background-color: color.adjust(variaveis.$corDeFundoBotaoSecundario, $lightness:3%);
         }
     }
     &--dark {
