--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,4 @@
+@use 'sass:color';
 @use 'variaveis';
 @use 'hero';
 @use 'shows';
@@ -106,7 +107,7 @@ body {
     border: 1px solid variaveis.$corDeFundoBotaoPrimario;
 
     &:hover {
-        background-color: lighten(variaveis.$corDeFundoBotaoPrimario, 3%);
+        background-color: color.adjust(variaveis.$corDeFundoBotaoPrimario, $lightness: 3%);
     }
 
     &--secondary {
@@ -114,7 +115,7 @@ body {
         border-color: variaveis.$corDeFundoBotaoSecundario;
 
         &:hover {
-            background-color: (variaveis.$corDeFundoBotaoSecundario, 3%);
+            background-color: color.adjust(variaveis.$corDeFundoBotaoSecundario, $lightness: 3%);
         }
     }
     &--dark {
